Update log feature